sys/src/bindings/i686-pc-windows-msvc.rs

#[test]
fn bindgen_test_layout_JSCFunctionListEntry() {
    assert_eq!(
        ::std::mem::size_of::<JSCFunctionListEntry>(),
        16usize,
        concat!("Size of: ", stringify!(JSCFunctionListEntry))
    );
    assert_eq!(
        ::std::mem::align_of::<JSCFunctionListEntry>(),
        8usize,
        concat!("Alignment of ", stringify!(JSCFunctionListEntry))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionListEntry>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_prop_flags() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionListEntry>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).prop_flags) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry),
                "::",
                stringify!(prop_flags)
            )
        );
    }
    test_field_prop_flags();
    fn test_field_def_type() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionListEntry>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).def_type) as usize - ptr as usize
            },
            5usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry),
                "::",
                stringify!(def_type)
            )
        );
    }
    test_field_def_type();
    fn test_field_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionListEntry>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic) as usize - ptr as usize
            },
            6usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry),
                "::",
                stringify!(magic)
            )
        );
    }
    test_field_magic();
    fn test_field_u() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionListEntry>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).u) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry),
                "::",
                stringify!(u)
            )
        );
    }
    test_field_u();
}
extern "C" {
    pub fn JS_SetPropertyFunctionList(
        ctx: *mut JSContext,
        obj: JSValue,
        tab: *const JSCFunctionListEntry,
        len: ::std::os::raw::c_int,
    );
}
pub type JSModuleInitFunc = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut JSContext, m: *mut JSModuleDef) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn JS_NewCModule(
        ctx: *mut JSContext,
        name_str: *const ::std::os::raw::c_char,
        func: JSModuleInitFunc,
    ) -> *mut JSModuleDef;
}
extern "C" {
    pub fn JS_AddModuleExport(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        name_str: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn JS_AddModuleExportList(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        tab: *const JSCFunctionListEntry,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn JS_SetModuleExport(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        export_name: *const ::std::os::raw::c_char,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn JS_SetModuleExportList(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        tab: *const JSCFunctionListEntry,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn JS_GetModuleExport(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        export_name: *const ::std::os::raw::c_char,
    ) -> JSValue;
}
extern "C" {
    pub fn JS_GetModuleExportEntriesCount(m: *mut JSModuleDef) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn JS_GetModuleExportEntry(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        idx: ::std::os::raw::c_int,
    ) -> JSValue;
}
extern "C" {
    pub fn JS_GetModuleExportEntryName(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        idx: ::std::os::raw::c_int,
    ) -> JSAtom;
}
